package com.directi.training.lsp.exercise.solution;

public interface IDuck {
    public void quack();
    public void swim();
}
