
@startuml

' NOTE: almost the same as the old one

package "com.directi.training.lsp.exercise.solution" {


    class IDuck {
        +quack(): void
        +swim(): void
    }

    class Duck {
        +quack(): void
        +swim(): void
    }

    class ElectronicDuck {
        -_on: boolean
        +quack(): void
        +swim(): void
        +turnOn(): void
        +turnOff(): void
    }

   class Pool {
        +run(): void
        -quack(ducks: List<Duck>): void
        -swim(ducks: List<Duck>): void
    }

    ElectronicDuck --|> IDuck
    Duck --|> IDuck
    Pool --> "*" IDuck

}
@enduml
